--- a/towndeli/order-history.html
+++ b/towndeli/order-history.html
@@ -443,10 +443,10 @@
                 <div class="col-sm-10">
                     <div class="orders-history-content">
                         <div class="row header">
-                            <div class="col-md-6">
+                            <div class="col-xs-6">
                                 <h4 class="title">Lịch sử đơn hàng</h4>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-xs-6">
                                 <input type="text" class="search-order form-control" placeholder="Nhập tên đơn hàng...">
                             </div>
                         </div>
@@ -472,11 +472,11 @@
                                                 <span class="date">13/12/2016</span>
                                             </td>
                                             <td>
-                                                <span class="code"></span>
+                                                <span class="code1">Mã:123456 <i></i></span>
                                                 <a href="">Cold-brewed coffee</a>
                                             </td>
                                             <td>
-                                                <span>4 <i class="star"></i></span>
+                                                <span class="star">4 <i></i></span>
                                             </td>
                                             <td>Đã giao</td>
                                             <td>
@@ -486,7 +486,85 @@
                                             <td>2 ly</td>
                                             <td>16.000đ</td>
                                             <td class="btn-control">
-                                                <a href="" class="btn1"></a>
+                                                <a href="" class="no-review"></a>
+                                                <a href="" class="btn2"></a>
+                                                <a href="" class="btn3"></a>
+                                                <a href="" class="btn4"></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>
+                                                <span class="code2">Mã:123456 <i></i></span>
+                                                <a href="">Cold-brewed coffee</a>
+                                            </td>
+                                            <td>
+                                                <span class="star">4 <i></i></span>
+                                            </td>
+                                            <td>Đã giao</td>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>2 ly</td>
+                                            <td>16.000đ</td>
+                                            <td class="btn-control">
+                                                <a href="" class="no-review"></a>
+                                                <a href="" class="btn2"></a>
+                                                <a href="" class="btn3"></a>
+                                                <a href="" class="btn4"></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>
+                                                <span class="code1">Mã:123456 <i></i></span>
+                                                <a href="">Cold-brewed coffee</a>
+                                            </td>
+                                            <td>
+                                                <span class="star">4 <i></i></span>
+                                            </td>
+                                            <td>Đã giao</td>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>2 ly</td>
+                                            <td>16.000đ</td>
+                                            <td class="btn-control">
+                                                <a href="" class="no-review"></a>
+                                                <a href="" class="btn2"></a>
+                                                <a href="" class="btn3"></a>
+                                                <a href="" class="btn4"></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>
+                                                <span class="code1">Mã:123456 <i></i></span>
+                                                <a href="">Cold-brewed coffee</a>
+                                            </td>
+                                            <td>
+                                                <span class="star">4 <i></i></span>
+                                            </td>
+                                            <td>Đã giao</td>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>2 ly</td>
+                                            <td>16.000đ</td>
+                                            <td class="btn-control">
+                                                <a href="" class="no-review"></a>
                                                 <a href="" class="btn2"></a>
                                                 <a href="" class="btn3"></a>
                                                 <a href="" class="btn4"></a>
@@ -502,9 +580,6 @@
                                         <li class="active"><span>1</span></li>
                                         <li><a>2</a></li>
                                         <li><a>3</a></li>
-                                        <li><a>4</a></li>
-                                        <li><a>5</a></li>
-                                        <li><a>6</a></li>
                                         <li class="border"><a>NEXT</a></li>
                                     </ul>
                                 </div>
